postAndCommnet/infsrastructure/k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      name: client-pod
  template:
    metadata:
      name: client
      labels:
        name: client-pod
        tier: front-end
    spec:
      containers:
        - name: postandcomment-client
          image: tajpouria/postandcomment-client
---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip
spec:
  selector:
    name: client-pod
  ports:
    - targetPort: 80
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: client-nodeport
spec:
  type: NodePort
  selector:
    name: client-pod
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30000
