postAndCommnet/infsrastructure/k8s/comment-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: comment-pod
  template:
    metadata:
      name: comment
      labels:
        name: comment-pod
        tier: back-end
    spec:
      containers:
        - name: postandcomment-comment
          image: tajpouria/postandcomment-comment
---
apiVersion: v1
kind: Service
metadata:
  name: comment-clusterip
spec:
  selector:
    name: comment-pod
  ports:
    - targetPort: 4001
      port: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: comment-nodeport
spec:
  type: NodePort
  selector:
    name: comment-pod
  ports:
    - targetPort: 4001
      port: 4001
      nodePort: 30009
